# anime_notificator

./: Cargo.toml  db.db  loaded_ongoings.json
src/: anime_search_engine.rs  lib.rs  main.rs
