[package]
name = "anime_notificator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.8", features = ["full"] }
regex = "*"
indicatif = "*"
tempfile = "*"
serde_json = "*"
serde = "*"
teloxide = { version = "*", features = ["full"] }
pickledb = "*"